# PeriConto_generic

./: .gitignore  README.md  Uncommitted_changes_before_Update_at_2_28_25,_12_02_PM_[Changes].patch  classes.dot  dockerfile  packages.dot  pyproject.toml  requirements.txt
attic/: single_list_selector.py  single_list_selector.ui  single_list_selector_impl.py
notes/: analysis_tree.md
ontologyRepository/: 01(1).json  01(3).json  01(5).json  01(6).json  01(7).json  01(8).json  01.json  01.nqd  BRICK04+bricks(1).trig  BRICK04+bricks(10).trig  BRICK04+bricks(11).trig  BRICK04+bricks(12).trig  BRICK04+bricks(13).trig  BRICK04+bricks(14).trig  BRICK04+bricks(3).trig  BRICK04+bricks(4).trig  BRICK04+bricks(5).trig  BRICK04+bricks(6).trig  BRICK04+bricks(7).trig  BRICK04+bricks(8).trig  BRICK04+bricks(9).trig  BRICK4+FIRST.  BRICK4+bricks(1).trig  BRICK4+bricks.trig  BRICKS+bricks.trig  BRICKS0+FIRST  BRICKS0+FIRST.  BRICKS0+SECOND  BRICKS0+bricks(3).trig  BRICKS0+bricks(4).trig  BRICKS0+bricks_play1.trig  BRICKS0+bricks_play2.trig  BRICKS0+tree.  BRICKS0+trees(1).trig  BRICKS0+trees__.trig  BRICKS00+bricks(1).trig  BRICKS00+bricks.trig  BRICKS00+trees.trig  BRICKS000+bricks.trig  Bricks00+bricks.trig  (+175 more)
src/: .nqd  BricksAndTreeSemantics.py  BricksAndTreesDataModel.py  BricksAutomaton.py  BricksSchemataBackEnd.py  BricksSchemataFrontEnd.py  BricksSchemata_gui.py  BricksSchemata_gui.ui  BricksSchemtata.py  DataModel.py  Digraph.gv  PeriConto.py  PeriContoAutomaton.py  PeriContoBackEnd.py  PeriContoCoatedProduct.py  PeriContoCoatedProductBackEnd.py  PeriContoCoatedProduct_gui.ui  (+45 more)
(+38 files in other folders)
