[project]
name = "PeriConto"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Heinz A Preisig", email = "heinz.preisig@chemeng.ntnu.no"},
]
dependencies = ["pyqt6>=6.8.1", "setuptools>=75.8.2", "graphviz>=0.20.3", "rdflib>=7.1.3"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
